--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -19,12 +19,11 @@
 
 /* For readability concerns, you should choose a lighter palette in dark mode. */
 [data-theme='dark'] {
-  --ifm-color-primary: #25c2a0;
-  --ifm-color-primary-dark: #21af90;
-  --ifm-color-primary-darker: #1fa588;
-  --ifm-color-primary-darkest: #1a8870;
-  --ifm-color-primary-light: #29d5b0;
-  --ifm-color-primary-lighter: #32d8b4;
-  --ifm-color-primary-lightest: #4fddbf;
-  --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.3);
+  --ifm-color-primary: #b2b2b3;
+  --ifm-color-primary-dark: #a0a0a1;
+  --ifm-color-primary-darker: #979798;
+  --ifm-color-primary-darkest: #7c7c7e;
+  --ifm-color-primary-light: #c4c4c5;
+  --ifm-color-primary-lighter: #cdcdce;
+  --ifm-color-primary-lightest: #e8e8e8;
 }
