--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -28,3 +28,31 @@
   --ifm-color-primary-lighter: #cdcdce;
   --ifm-color-primary-lightest: #e8e8e8;
 }
+
+.simple-class {
+  color: blue;
+  /* background-color: silver; */
+  background-image: url("/static/img/rfed-hero.svg");
+  height: 1200px;
+  width: 1200px;
+  padding: 10px;
+  border-radius: 10px;
+  border: 2px solid black;
+
+}
+
+/* BLG */
+.hero {
+  background-image: url("/static/img/rfed-hero.svg");
+  background-position: bottom;
+  background-repeat: no-repeat;
+  background-color: lightgray;
+}
+
+.hero__title{
+  /* color: rgba(17, 16, 16, 0.678); */
+  color: black;
+}
+.hero__subtitle{
+  color: rgba(17, 16, 16, 0.678);
+}
