navbar now showing carbide logo

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -56,3 +56,20 @@
 .hero__subtitle{
   color: rgba(17, 16, 16, 0.678);
 }
+
+@font-face {
+  font-family: nasalization;
+  src: url("/static/font/nasalization-rg.otf");
+}
+
+.nasa{
+  font-family: nasalization;
+}
+.nasa-black{
+  font-family: nasalization;
+  color: black;
+}
+.nasa-red{
+  font-family: nasalization;
+  color: red;
+}
